# Synarche_Workshop

./: .eslintrc.json  .geminiignore  .gitignore  .markdownlint.cjs  .prettierrc  .vale.ini  .venv  COMMAND_CENTER.md  COMMAND_CENTER_PROPOSAL.md  CORE_COMPILER_ENGINE_REVIEW.md  Flattened_Synarche_Synthesis_System_Loom.md  GEMINI.md  PLAN-faraday-cage-hooks.md  README.md  SELT-MILESTONE-001_AwakeningOfTheTriad.md  Synarche_Workspace.code-workspace  UMB-TEST-001_AscensionTest_v13.0.md  Visualize Synarche Synthesis System Loom.md  WORKSHOP_MAP.md  arise.bat  audit_log.txt  audit_report.txt  axion_manifest.md  bootstrap_axion.py  cspell.json  episemantic_validation_framework_analysis.md  eslint.config.mjs  findings.md  hashes.json  package-lock.json  package.json  phoenix-rules.cjs  presentation_audit.txt  progress.md  pyproject.toml  pyrefly.toml  reforge_batch.txt  requirements.txt  scaffolding_audit.txt  scaffolding_audit_v2.txt  (+11 more)
axion-core/: .pre-commit-config.yaml  Axion-Core_Extension.code-workspace  README.md  SYNERGY_REPORT.md  activate_axion.py  audit_log.txt  audit_report.txt  crystallize_session.py  cse_engine.py  eslint.config.mjs  index.ts  mypy.ini  omega-integration.md  omega-scheduling-plan.md  package-lock.json  package.json  pyproject.toml  registry_updates.yaml  requirements.txt  resonance_report.json  sentinel_report.json  standardize-omega-governance.md  standardized_graph.json  test_ascension.py  tsconfig.json  verify_maintenance.py  verify_oathkeeper.py
axion-core/.prs_database/: docker-compose.yml  index.ts  setup_prs_db.ps1  setup_prs_db.sh  (+1 more)
(+3803 files in other folders)
