[build-system]
    requires = ["setuptools>=42", "wheel"]
    build-backend = "setuptools.build_meta"
    
    [project]
    name = "axion-core"
    version = "15.0.0"
    dependencies = [
        "markdown",
        "python-frontmatter",
        "python-dotenv",
        "jsonschema",
        "GitPython",
        "requests",
        "pytest",
        "mypy",
        "rich",
        "pyyaml",
        "jinja2",
        "pydantic",
        "langchain",
        "langgraph"
    ]
    
